syntax = "proto3";

package user;

option go_package = "github.com/abhivaikar/playpi/services/grpc/user_registration/pb/user";

service UserService {
    rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse);
    rpc SignIn(SignInRequest) returns (SignInResponse);
    rpc GetProfile(GetProfileRequest) returns (GetProfileResponse);
    rpc UpdateProfile(UpdateProfileRequest) returns (UpdateProfileResponse);
    rpc DeleteAccount(DeleteAccountRequest) returns (DeleteAccountResponse);
}

message User {
    string username = 1;
    string password = 2;
    string email = 3;
    string full_name = 4;
    string phone = 5;
    string address = 6;
}

message RegisterUserRequest {
    User user = 1;
}

message RegisterUserResponse {
    bool success = 1;
    string message = 2;
}

message SignInRequest {
    string username = 1;
    string password = 2;
}

message SignInResponse {
    bool success = 1;
    string message = 2;
    string token = 3;
}

message GetProfileRequest {
    string token = 1;
}

message GetProfileResponse {
    User user = 1;
}

message UpdateProfileRequest {
    string token = 1;
    User user = 2;
}

message UpdateProfileResponse {
    bool success = 1;
    string message = 2;
}

message DeleteAccountRequest {
    string token = 1;
}

message DeleteAccountResponse {
    bool success = 1;
    string message = 2;
}
